--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -8,7 +8,11 @@
 
 <div class="container body-content">
 
-    <!-- // TODO #2 - display the job fields, one per row -->
+    <h1>Job Detail</h1>
+
+    <div th:object="${job}">
+        <table th:replace="list-jobs :: single-job"></table>
+    </div>
 
 </div>
 
